Fixing widget display in dark modes Fix #66

--- a/css/widget.css
+++ b/css/widget.css
@@ -21,6 +21,7 @@
   padding: 0;
   border: 1px solid #e0e0e0;
   font-family: sans-serif;
+  color: black;
 }
 
 .ipysigma-widget hr {
